public/css/relationships.css
#relationships {
	margin-right: auto;
	margin-left: auto;
	border-spacing: 5px;
}

#relationships td, #relationships th {
	padding: 10px;
	width: 250px;
}

.name {
	float: right;
	width: 200px;
	text-align: right;
}

#relationships th {
	text-align: center;
}

#relationships tr td:first-child {
	border-right: 1px solid blue;
	border-top: 1px solid blue;
	border-radius: 0px 20px 0px 0px;
}

#relationships tr td:last-child {
	border-radius: 20px 0px 0px 0px;
	border-top: 1px solid blue;
	border-left: 1px solid blue;
	border-collapse: separate;
}

#relationships tr td:first-child {
	text-align: left;
}

#relationships tr td:nth-child(2) {
	text-align: left;
}

#toggleViewButton {
	font-size: 1em;
	color: #9999ff;
	background-color: black;
	padding: 10px;
	border: 1px solid blue;
	margin-top: -1px;
	border-radius: 0px 0px 10px 10px;
}

#toggleViewButton:focus {
	outline:0;
}

#toggleViewButtonHolder {
	border-top: 1px solid blue;
	text-align: center;
	margin-bottom: 20px;
}

.newRelationshipDropdown {
	width: 180px;
}

.deleteRelationshipButton, .newRelationshipButton {
	font-size: 1.2em;
	margin: 0px 10px 0px 0px;
	background-color: rgba(0, 0, 0, 0);
	border:none;
	padding: 0px;
	font-weight: bold;
	clear: right;
	clear: left;
}

.deleteRelationshipButton {
	color:red;
}

.newRelationshipButton {
	color:green;
}

.hidden {
	display: none;
}

